# nvidia-nat

./: .gitignore  README.md  climate_science_chatbot.ipynb  ui_manager.py
ai-realtor/: pyproject.toml
ai-realtor/src/: inference.py
ai-realtor/src/data/: generator.py  processor.py
ai-realtor/src/gaurdrails/: config.yaml
ai-realtor/src/observability/: trace.py
climate-chatbot/: climate_science_chatbot.ipynb  config.yaml
intelligent-climate-assistant/: climate-analysis.ipynb
intelligent-climate-assistant/climate-analyzer/: pyproject.toml
intelligent-climate-assistant/climate-analyzer/src/climate-analyzer/: register.py
intelligent-climate-assistant/climate-analyzer/src/climate-analyzer/configs/: config.yml
intelligent-climate-assistant/resources/: stations.csv  temperature_monthly.csv
intelligent-climate-assistant/tools/: climate_tools.py
resources/: data_summary.json  temperature_annual.csv
